@startuml

class Cadena {
    - String nombre
    - ArrayList<Programa> listaProgramas
    + void agregarPrograma(Programa programa)
    + ArrayList<Programa> getListaProgramas()
    + void setListaProgramas(ArrayList<Programa> listaProgramas)
    + String getNombre()
    + void setNombre(String nombre)
}

class Programa {
    - String nombre
    - Cadena cadena
    - int temporada
    - ArrayList<Empleado> listaEmpleados
    - ArrayList<Invitado> listaInvitados
    - Empleado director
    + void insertarInvitado(String nombre, String profesion, int temporada)
    + void invitadosTemporada(int temporada)
    + void vecesInvitado(String nombre)
    + void rastrearInvitados(String nombre)
    + void insertarEmpleado(String nombre, String cargo, Empleado director)
    + ArrayList<Empleado> getListaEmpleados()
    + void setListaEmpleados(ArrayList<Empleado> listaEmpleados)
    + Empleado getDirector()
    + void setDirector(Empleado director)
    + ArrayList<Invitado> getListaInvitados()
    + void setListaInvitados(ArrayList<Invitado> listaInvitados)
    + Cadena getCadena()
    + void setCadena(Cadena cadena)
    + int getTemporada()
    + void setTemporada(int temporada)
    + String getNombre()
    + void setNombre(String nombre)
}

class Empleado {
    - String id
    - String nombre
    - String cargo
    - Empleado director
    + String getId()
    + String getNombre()
    + void setNombre(String nombre)
    + String getCargo()
    + void setCargo(String cargo)
    + Empleado getDirector()
    + void setDirector(Empleado director)
}

class Invitado {
    - String nombre
    - String profesion
    - LocalDate fecha_visita
    - int temporada
    + String getProfesion()
    + void setProfesion(String profesion)
    + int getTemporada()
    + void setTemporada(int temporada)
    + LocalDate getFecha_visita()
    + void setFecha_visita(LocalDate fecha_visita)
    + String getNombre()
    + void setNombre(String nombre)
}

Cadena "1" *-- "1..*" Programa : contiene
Programa "1" *-- "*" Empleado : tiene
Programa "1" *-- "*" Invitado : tiene
Empleado "1" -- "0..1" Empleado : dirige
Programa "1" -- "1" Cadena : pertenece a

@enduml
